# kompler

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  FEATURES.md  GTM_PLAN.md  LOVABLE_PROMPT.md  LOVABLE_UPDATE_1.md  LOVABLE_UPDATE_2.md  LOVABLE_UPDATE_3.md  LOVABLE_UPDATE_4.md  LOVABLE_UPDATE_5.md  OPERATIONS.md  PROJECT.md  ROADMAP.md  SECURITY.md  SETUP.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: add_agent_tables.py  add_profile_table.py  cleanup_alerts.py  cleanup_demo.py  create_tables.sql  extract_entities.py  fix_frameworks.py  init_db.sql  pg_hba.conf  prepare_demo.py  reenrich.py  reprocess_all.py  seed.py  setup_neon.py  test_agent.py  test_db.py  test_spanish.py  test_upload.py  test_upload2.py  test_usecases.py
src/agents/: compliance.py  document_analysis.py
src/api/: app.py  deps.py
src/cache/: content_hash.py  response.py  semantic.py
src/compliance/: completeness.py  frameworks.py  profile.py  resolutions.py  tracker.py
src/core/: config.py  exceptions.py  interfaces.py  schemas.py
src/db/: base.py  models.py
src/enrichment/: pipeline.py  processor.py  prompts.py  text_extract.py
src/events/: bus.py  schemas.py  subscribers.py  webhooks.py
src/graph/: community.py  patterns.py  resolution.py
src/ingestion/: migration.py
src/metering/: dashboard.py  limits.py  storage.py  tracker.py
src/plugins/: registry.py  sdk.py
src/search/: hybrid.py
(+40 files in other folders)
